--- a/whitepaper.tex
+++ b/whitepaper.tex
@@ -86,7 +86,7 @@
 \vspace*{\baselineskip}
 
 \begin{center}
-{Clifford Syner, Tristan Barrett, Samee Siddiqui}
+{Alpine Syner, Tristan Barrett, Samee Siddiqui}
 \end{center}
 
 \vspace*{\baselineskip}
