--- a/whitepaper.tex
+++ b/whitepaper.tex
@@ -81,7 +81,11 @@
 \begin{document}
 
 \begin{center}
-\section{Rift HyperBridge: Enabling Trustless Swaps Between Bitcoin and Ethereum}
+\textbf{\Huge Rift Hyperbridge}
+\end{center}
+
+\begin{center}
+\section*{Enabling Trustless Swaps Between Bitcoin and Ethereum}
 \end{center}
 \vspace*{\baselineskip}
 
@@ -225,7 +229,7 @@ ever.}
 {}
 
 \hspace{3em}{Rift implements a set of zero knowledge circuits }{that verifies a
-Buyer paid an arbitrary number of Liquidity Providers (LPs}{) were paid
+Buyer paid an arbitrary number of Liquidity Providers (LPs}{)
 on Bitcoin, and an on-chain order book smart contract on Ethereum
 {[}15{]} that allows Buyers to redeem escrowed ETH deposited by an LP
 upon verifying a zk-proof {[}16{]} that the LP(s) were paid in Bitcoin.}
@@ -1374,8 +1378,7 @@ vectors and how the protocol's design prevents them:}
 \tightlist
 \item
   \textbf{Generalization of ZK light client for other DeFi protocols }{- The ZK
-  light client can be extended to support reading of arbitrary state on
-  Bitcoin, and as a result new DeFi protocols can be designed around
+  light client can be extended to verify any Bitcoin state transition on Ethereum, and as a result new DeFi protocols can be designed around
   Bitcoin and Ethereum interoperability. Some examples include lending,
   account abstraction, NFT marketplaces, and collateralized synthetic
   assets.}
