--- a/whitepaper.tex
+++ b/whitepaper.tex
@@ -91,11 +91,11 @@
 \vspace*{\baselineskip}
 
 \begin{center}
-{Cliff Syner{~~~~~~~~~~~~~~}Tristan Barrett{~~~~~~~~~~~~}Samee Siddiqui}
+{Clifford Syner{~~~~~~~~~~~~}Tristan Barrett{~~~~~~~~~~~~}Samee Siddiqui}
 \end{center}
 
 \begin{center}
-{cliff@rift.exchange{~~~~~}tristan@rift.exchange{~~~~~}samee@rift.exchange}
+\hspace{0.7em}{cliff@rift.exchange{~~~~~~}tristan@rift.exchange{~~~~~}samee@rift.exchange}
 \end{center}
 
 \vspace*{\baselineskip}
